# dirtidy

./: .dirtidyrc.toml.example  .gitignore  Cargo.toml  FILE_FILTERING.md  README.md
.github/: dependabot.yml
.github/workflows/: release.yml
src/: cli.rs  config.rs  file_category.rs  file_organizer.rs  lib.rs  main.rs  output.rs  undo.rs
tests/: integration_tests.rs
