[package]
name = "dirtidy"
version = "0.2.0"
edition = "2024"
authors = ["Nicola Bonsi <nicola.bonsi95@gmail.com>"]
description = "Automatically organize files into category-based subdirectories with dry-run and undo support."

[dependencies]
infer = "0.19"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.9"
glob = "0.3"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
indicatif = "0.18"

[dev-dependencies]
tempfile = "3"
